src/test/deca/context/invalid/classes/method_return_type_void_in_expr.deca
// Description :
//    Méthode void utilisée comme expression.
//
// Resultats :
//    Erreur contextuelle
//    Ligne 15 : Type incompatible : attendu int, trouvé void

class A {
    void f() {
    }
}

{
    A a = new A();
    int x = a.f();
}

